add all handler to swagger
